--- a/filter-range.html
+++ b/filter-range.html
@@ -83,7 +83,7 @@
     <div class="bg-light vh-100">
         <div class="vh-100 d-flex align-items-center justify-content-center">
             <div class="w-100 d-flex align-items-center bg-white container border h-100">
-                <div id="aq" class="w-100">
+                <div id="example" class="w-100">
                 </div>
 
             </div>
@@ -172,7 +172,7 @@
             calculateRanges();
         };
 
-        generatePriceRange(aq, 1, 50);
+        generatePriceRange(example, 1, 50);
     </script>
 
 </body>
