--- a/index.html
+++ b/index.html
@@ -6,76 +6,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-
-    <style>
-        #price_range_component::before {
-            content: '';
-            left: 0;
-            top: 45%;
-            background: gray;
-            height: 10%;
-            width: 100%;
-            position: absolute;
-            border-radius: 25px;
-        }
-
-        #price_range_component {
-            position: relative;
-            user-select: none;
-        }
-
-        #price_range_component,
-        .price-button {
-            height: 25px;
-        }
-
-        .button-container {
-            position: absolute;
-        }
-
-        .min-container {
-            left: 0;
-        }
-
-        .price-button::before {
-            width: 0;
-            height: 0;
-            border-left: 5px solid transparent;
-            border-right: 5px solid transparent;
-            border-bottom: 5px solid #59a9a6;
-            content: '';
-            bottom: -10px;
-            position: absolute;
-            left: 40%;
-        }
-
-        .price-button::after {
-            content: attr(data-display);
-            position: absolute;
-            color: white;
-            bottom: -40px;
-            left: 0;
-            right: 0;
-            text-align: center;
-            line-height: 30px;
-            background: #59a9a6;
-            border-radius: 13px;
-        }
-
-        .max-container {
-            right: 0;
-        }
-
-        .price-button {
-            font-size: 16px;
-            width: 35px;
-            background: white;
-            border-radius: 50px;
-            box-shadow: 0px 3px 6px 3px rgb(0 0 0 / 20%);
-            position: relative;
-            cursor: pointer;
-        }
-    </style>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
@@ -109,92 +40,12 @@
         </div>
     </div>
 
+    <script src="./price-range.js"></script>
     <script>
+        generatePriceRange(example_container, parseInt(example_min.value), parseInt(example_max.value), (e) => { console.log(e) });
 
-        function generatePriceRange(container, initial_min_value, initial_max_value) {
-            if (!container
-                || !container instanceof HTMLDivElement
-                || !parseInt(initial_min_value)
-                || !parseInt(initial_max_value)
-                || initial_min_value >= initial_max_value) return alert('Error price-range-filter: Invalid parameters.');
-
-            let min_rect, min_range, min_range_offset, current_min_value,
-                max_rect, max_range, max_range_offset, current_max_value;
-
-            container.innerHTML =
-                `<div id="price_range_component" data-min="0" data-max="100">
-                    <div class="button-container min-container">
-                        <div id="min_button" data-display="1" data-value="1" class="pointer price-button"></div>
-                    </div>
-                    <div class="button-container max-container">
-                        <div id="max_button" data-display="100" data-value="100" class="pointer price-button"></div>
-                    </div>
-                </div>`;
-
-            min_rect = min_button.parentElement.getBoundingClientRect();
-            min_range = (min_rect.x + parseInt(min_rect.width / 2));
-            max_rect = max_button.parentElement.getBoundingClientRect();
-            max_range = (max_rect.x + parseInt(max_rect.width / 2));
-            min_button.dataset.display = initial_min_value;
-            max_button.dataset.display = initial_max_value;
-
-            function calculateRanges() {
-                min_rect = min_button.parentElement.getBoundingClientRect();
-                min_range_offset = (min_button.parentElement.offsetParent.clientWidth - min_rect.width) - (min_button.parentElement.offsetLeft);
-                max_rect = max_button.parentElement.getBoundingClientRect();
-                max_range_offset = max_button.parentElement.offsetLeft;
-
-                current_min_value = parseInt(min_button.dataset.value);
-                current_max_value = parseInt(max_button.dataset.value);
-
-                price_range_component.dataset.min = min_range_offset;
-                price_range_component.dataset.max = max_range_offset;
-            }
-
-            min_button.addEventListener('mousedown', () => {
-                document.body.onmousemove = e => {
-                    let coord = e.clientX - min_range;
-                    if (coord < 0) coord = 0;
-                    if (coord >= price_range_component.dataset.max) coord = price_range_component.dataset.max - 1;
-                    min_button.parentElement.style.left = coord + 'px';
-
-                    if (coord === 0) coord = 1;
-                    let value = Math.ceil((coord * 100) / (max_range - min_range));
-
-                    value = parseInt(initial_min_value + ((initial_max_value - initial_min_value) * value * 0.01));
-                    if (value == current_max_value && value > initial_min_value) value = current_max_value - 1;
-                    min_button.dataset.value = value;
-                    min_button.dataset.display = value;
-                }
-            })
-
-            max_button.addEventListener('mousedown', () => {
-                document.body.onmousemove = e => {
-                    let coord = max_range - e.clientX;
-                    if (coord < 0) coord = 0;
-                    if (coord >= min_range_offset) coord = min_range_offset - 1;
-                    max_button.parentElement.style.right = coord + 'px';
-
-                    let value = Math.ceil((coord * 100) / (max_range - min_range));
-                    value = parseInt(initial_max_value - ((initial_max_value - initial_min_value) * value * 0.01));
-                    if (value <= current_min_value) value = current_min_value;
-                    max_button.dataset.value = value;
-                    max_button.dataset.display = value;
-                }
-            })
-
-            document.body.addEventListener('mouseup', () => {
-                calculateRanges();
-                if (document.body.onmousemove) document.body.onmousemove = null;
-            })
-
-            calculateRanges();
-        };
-
-        generatePriceRange(example_container, parseInt(example_min.value), parseInt(example_max.value));
-
-        example_min.addEventListener('change', () => generatePriceRange(example_container, parseInt(example_min.value), parseInt(example_max.value)));
-        example_max.addEventListener('change', () => generatePriceRange(example_container, parseInt(example_min.value), parseInt(example_max.value)));
+        example_min.addEventListener('change', () => { generatePriceRange(example_container, parseInt(example_min.value), parseInt(example_max.value), (e) => { console.log(e) }) });
+        example_max.addEventListener('change', () => { generatePriceRange(example_container, parseInt(example_min.value), parseInt(example_max.value), (e) => { console.log(e) }) });
     </script>
 
 </body>
